--- a/policy.html
+++ b/policy.html
@@ -5,16 +5,16 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.CaSpy0iN.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CSmClbYB.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.8DkDJb5M.js">
+		<link href="./_app/immutable/assets/0.ByBxx2OG.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Bm6OtBmp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BRZt2wbb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C48__LxL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.B6N6wSg0.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.D-DULBp7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.B7PkU9BE.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.h2i67QyP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.D6kgxu3v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3sDKnxy.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DZ_2aDP4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.ChhjVIL8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CjKi5fw7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores._1X7_5a9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/5.Cu-w-T7S.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -22,7 +22,7 @@
 			
 			<script>
 				{
-					__sveltekit_165no8o = {
+					__sveltekit_g6j1ku = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/emeraldbuisness"
 					};
@@ -32,8 +32,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CSmClbYB.js"),
-						import("./_app/immutable/entry/app.D-DULBp7.js")
+						import("./_app/immutable/entry/start.Bm6OtBmp.js"),
+						import("./_app/immutable/entry/app.h2i67QyP.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
