--- a/services.html
+++ b/services.html
@@ -5,29 +5,29 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.CaSpy0iN.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CSmClbYB.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.8DkDJb5M.js">
+		<link href="./_app/immutable/assets/0.ByBxx2OG.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Bm6OtBmp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BRZt2wbb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C48__LxL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.B6N6wSg0.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.D-DULBp7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.B7PkU9BE.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.h2i67QyP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.D6kgxu3v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3sDKnxy.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DZ_2aDP4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.ChhjVIL8.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/6.Byw-F7Yz.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CjKi5fw7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores._1X7_5a9.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/6.BrBiirDz.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <div class="bg-base-100"><div class="relative flex h-16 items-center"> <div data-svelte-h="svelte-j9fyah"><a href="."><img class="w-46 h-44" src="./images/logo_transparent.png" alt=""></a></div>  <div class="flex absolute w-full"><div class="ml-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-1iynw3v"><a href="./">Home</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-y9v63d"><a href="./services">Services</a></li></ul></div> <div class="mr-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-6obtgc"><a href="./about">About</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-s4ddkx"><a href="./contact">Contact</a></li></ul></div> </div></div></div>  <main class="min-h-screen"><div class="min-h-screen bg-base-200"><div class="flex justify-evenly py-60 mb-80"><div class="flex items-center justify-center"><a href="#websites" data-svelte-h="svelte-e7icxg"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/website.jpg" alt=""></a> <span class="absolute text-center text-white text-2xl font-bold" data-svelte-h="svelte-1i0c23r">Websites</span></div> <div class="flex items-center justify-center"><a href="#desktop" data-svelte-h="svelte-5zb7e7"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/desktop.jpg" alt=""></a> <span class="absolute text-center text-white text-2xl font-bold" data-svelte-h="svelte-18cicrk">Desktop Applications</span></div> <div class="flex items-center justify-center"><a href="#automation" data-svelte-h="svelte-1nwsart"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/automation.jpg" alt=""></a> <span class="absolute text-center text-white text-2xl font-bold" data-svelte-h="svelte-4ux45w">Automation</span></div></div> <div class="bg-black text-white" data-svelte-h="svelte-3gral5"><div class="hero h-[45rem]" id="websites"><div class="hero-content flex-col lg:flex-row-reverse"><img src="./images/website.jpg" class="h-64 max-w-sm rounded-lg shadow-2xl"> <div><h1 class="text-5xl font-bold">Websites</h1> <p class="py-6">Unser Ziel ist es, Ihnen dabei zu helfen, Ihre Online-Präsenz zu stärken und zu
+		<div style="display: contents">  <div class="bg-base-100"><div class="relative flex h-16 items-center"> <div data-svelte-h="svelte-j9fyah"><a href="."><img class="w-46 h-44" src="./images/logo_transparent.png" alt=""></a></div>  <div class="flex absolute w-full"><div class="ml-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-1iynw3v"><a href="./">Home</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-y9v63d"><a href="./services">Services</a></li></ul></div> <div class="mr-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-6obtgc"><a href="./about">About</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-s4ddkx"><a href="./contact">Contact</a></li></ul></div> </div></div></div>  <main class="min-h-screen"><div class="min-h-screen bg-base-200"><div class="md:flex justify-evenly py-60 mb-80"><div class="flex items-center justify-center "><a href="#websites" data-svelte-h="svelte-xsmmuu"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/website.png" alt=""></a> <span class="absolute text-center text-2xl font-bold" data-svelte-h="svelte-nvjehk">Websites</span></div> <div class="flex items-center justify-center"><a href="#desktop" data-svelte-h="svelte-1mah567"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/desktop.png" alt=""></a> <span class="absolute text-center text-2xl font-bold" data-svelte-h="svelte-xdhk2b">Desktop Applications</span></div> <div class="flex items-center justify-center"><a href="#automation" data-svelte-h="svelte-1xzzrnt"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/automation.png" alt=""></a> <span class="absolute text-center text-2xl font-bold" data-svelte-h="svelte-1yas7ev">Automation</span></div></div> <div class="bg-black text-white" data-svelte-h="svelte-1sp6dvv"><div class="hero h-[45rem]" id="websites"><div class="hero-content flex-col lg:flex-row-reverse"><img src="./images/website.png" class="h-64 max-w-sm rounded-lg shadow-2xl"> <div><h1 class="text-5xl font-bold">Websites</h1> <p class="py-6">Unser Ziel ist es, Ihnen dabei zu helfen, Ihre Online-Präsenz zu stärken und zu
 						optimieren. Egal, ob Sie eine neue Website von Grund auf erstellen möchten, Ihre
 						bestehende Website überarbeiten oder einzigartige Weblösungen für Ihr Unternehmen
 						entwickeln wollen, wir haben die richtigen Tools und Experten, um Ihre Vision in die
-						Realität umzusetzen.</p></div></div></div> <div class="hero h-[45rem]" id="desktop"><div class="hero-content flex-col lg:flex-row"><img src="./images/desktop.jpg" class="max-w-sm rounded-lg shadow-2xl"> <div><h1 class="text-5xl font-bold text-right">Desktop Applications</h1> <p class="py-6 text-right">Selbstverständlich bieten wir Ihnen eine umfassende Palette von Dienstleistungen im
+						Realität umzusetzen.</p></div></div></div> <div class="hero h-[45rem]" id="desktop"><div class="hero-content flex-col lg:flex-row"><img src="./images/desktop.png" class="h-64 max-sm:w-[90%] max-w-sm rounded-lg shadow-2xl"> <div><h1 class="text-5xl font-bold ">Desktop Applications</h1> <p class="py-6 ">Selbstverständlich bieten wir Ihnen eine umfassende Palette von Dienstleistungen im
 						Bereich der Desktop-Anwendungsentwicklung an. Unser Ziel ist es, Ihnen dabei zu helfen,
 						maßgeschneiderte Softwarelösungen zu entwickeln, die Ihre Geschäftsprozesse optimieren
 						und Ihre Ziele erreichen. Egal, ob Sie eine spezielle Hardware-Anwendung, eine
 						Systemebene-Software oder eine komplexe 3D-Modellierungssoftware benötigen, wir haben
-						die Expertise und die Tools, um Ihre Vision in die Realität umzusetzen.</p></div></div></div> <div class="hero h-[45rem]" id="automation"><div class="hero-content flex-col lg:flex-row-reverse"><img src="./images/automation.jpg" class="h-64 max-w-sm rounded-lg shadow-2xl"> <div><h1 class="text-5xl font-bold">Automation</h1> <p class="py-6">Wie schaffen sie es lästige Aufgaben, die nur Zeit und Geld kosten loszuwerden? Wir
+						die Expertise und die Tools, um Ihre Vision in die Realität umzusetzen.</p></div></div></div> <div class="hero h-[45rem]" id="automation"><div class="hero-content flex-col lg:flex-row-reverse"><img src="./images/automation.png" class="h-64 max-w-sm rounded-lg shadow-2xl"> <div><h1 class="text-5xl font-bold">Automation</h1> <p class="py-6">Wie schaffen sie es lästige Aufgaben, die nur Zeit und Geld kosten loszuwerden? Wir
 						optimieren ihr Alltagsgeschäft und gestalten es effizienter. Egal, ob Sie sich auf die
 						Automatisierung einzelner Aufgaben, den gesamten Arbeitsablauf oder unternehmensweite
 						Prozesse konzentrieren möchten, wir haben die Expertise und die Tools, um Ihre Vision in
@@ -35,7 +35,7 @@
 			
 			<script>
 				{
-					__sveltekit_165no8o = {
+					__sveltekit_g6j1ku = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/emeraldbuisness"
 					};
@@ -45,8 +45,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CSmClbYB.js"),
-						import("./_app/immutable/entry/app.D-DULBp7.js")
+						import("./_app/immutable/entry/start.Bm6OtBmp.js"),
+						import("./_app/immutable/entry/app.h2i67QyP.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
