--- a/about.html
+++ b/about.html
@@ -5,17 +5,17 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.DWWC5kSI.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BbsvtwJG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D7pTlZnq.js">
+		<link href="./_app/immutable/assets/0.ObPrKoMH.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Xx9ZSke9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bxu5TOhL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BHDZ3kkz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.CDa1U5M_.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BzyMW-EX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.CsDaRMss.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DFFFBgrA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.D6kgxu3v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CaGSb-jg.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Cwt14fpX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DTBt0O6w.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.fd7ySIoP.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Cq46cVN2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CTm1tFL7.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.GPipPQ9b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">   <div class="bg-base-100"><div class="relative flex h-16 items-center"> <div data-svelte-h="svelte-kysvzf"><a href="."><img class="w-46 h-44" src="./images/logo_transparent.png" alt=""></a></div> <div class="md:hidden"><button aria-expanded="false" aria-label="toggle menu" class="svelte-u18hxq"><svg viewBox="0 0 100 100" fill="none" stroke="currentColor" stroke-width="5" width="80" class="svelte-u18hxq"><path class="top svelte-u18hxq" d="m 30,33 h 40 c 3.722839,0 7.5,3.126468 7.5,8.578427 0,5.451959 -2.727029,8.421573 -7.5,8.421573 h -20"></path><path class="middle svelte-u18hxq" d="m 30,50 h 40"></path><path class="bottom svelte-u18hxq" d="m 70,67 h -40 c 0,0 -7.5,-0.802118 -7.5,-8.365747 0,-7.563629 7.5,-8.634253 7.5,-8.634253 h 20"></path></svg> </button></div>  <div class="flex absolute w-full max-sm:hidden"><div class="ml-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-1iynw3v"><a href="./">Home</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-1j6q324"><a href="./services">Services</a></li></ul></div> <div class="mr-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-6obtgc"><a href="./about">About</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-vilpy2"><a href="./contact">Contact</a></li></ul></div> </div></div> </div>  <main class="min-h-screen"><div class="relative min-h-[45vh] flex items-center justify-center bg-black" data-svelte-h="svelte-1hybtjf"><img class="object-cover blur-md w-full h-[45vh]" src="./images/partner.png" alt=""> <figure class="absolute mx-auto"><h1 class="font-extrabold text-white text-center text-6xl">Ihr neuer Partner!</h1> <p class="font-bold text-gray-200 text-center">Moderne Software welche ihr Unternehmen repräsentiert</p> <a href="./contact" class="relative left-[28%] mt-10 btn bg-green-400">Kontaktieren sie uns!</a></figure></div> <div class="flex text-white flex-col-reverse items-center pt-10 bg-black" data-svelte-h="svelte-1y4fc7e"><div class="flex-col w-[40%] md:h-[35rem]"><h1 class="text-5xl pt-20 text-center">Wer sind wir?</h1> <p class="break-word md:break-all mt-8">Wir sind ein junges Unternehmen, welches sich ein Ziel gesetzt hat Software auf einen neuen
@@ -28,7 +28,7 @@
 			
 			<script>
 				{
-					__sveltekit_1wzqt0c = {
+					__sveltekit_17p8st1 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/emeraldbuisness"
 					};
@@ -38,8 +38,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BbsvtwJG.js"),
-						import("./_app/immutable/entry/app.BzyMW-EX.js")
+						import("./_app/immutable/entry/start.Xx9ZSke9.js"),
+						import("./_app/immutable/entry/app.DFFFBgrA.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
